Ensure the whole arrow is visible.

--- a/app/assets/stylesheets/_scene.sass
+++ b/app/assets/stylesheets/_scene.sass
@@ -97,7 +97,7 @@
             font-weight: bold
 
           .difference
-            padding-left: 20px
+            padding: 1px 0 1px 20px
 
           .up
             background: image-url("scenes/modern/icons/up.png") center left no-repeat
